--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ repository               : "Alireza-Ghafouri/Alireza-Ghafouri.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  name             : "Alireza Ghafouri"
+  pronouns         : "he/him" # example: "she/her"  
+  bio              : "Computer Vision Researcher"
+  location         : "Tehran/Iran"
+  employer         : "University of Tehran"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "alirezaghafouri77@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
