--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   steam            : # Username
   telegram         : "alirezazghafouri1" # URL
   tumblr           : # Username
-  twitter          : "Alireza_Ghafr" # Username for X / Twitter
+  twitter          : "Alireza_Ghfr" # Username for X / Twitter
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
