--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Alireza Ghafouri"
   pronouns         : "he/him" # example: "she/her"  
   bio              : "Computer Vision Researcher"
-  location         : "Tehran/Iran"
+  location         : "Tehran, Iran"
   employer         : "University of Tehran"
   uri              : # URL
   email            : "alirezaghafouri77@gmail.com" 
