--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : # URL
   impactstory      : # URL
-  orcid            : # URL
+  orcid            : "https://orcid.org/0009-0004-9697-8536" # URL
   semantic         : # URL
   pubmed           : # URL
   researchgate     : # URL
