--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "Photo.jpg"
   name             : "Alireza Ghafouri"
   pronouns         : "he/him" # example: "she/her"  
-  bio              : "Computer Vision Researcher"
+  bio              : "Machine Learning Researcher"
   location         : "Tehran, Iran"
   employer         : "University of Tehran"
   uri              : # URL
